@@ -4,6 +4,8 @@
 	SignalMixin and FakeSlaveBuilder from here ..
 	* buildbot/test/runutils.py: .. to here, so they can be used by
 	other test classes too
+	* buildbot/test/test_vc.py: more SignalMixin refactoring
+	* buildbot/test/test_control.py: same
 
 2006-06-15  Brian Warner  <warner@lothar.com>
 
